--- a/css/base.css
+++ b/css/base.css
@@ -13,6 +13,10 @@
 
 body {
   background-color: #222222;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   color: whitesmoke;
   display: flex;
   flex-direction: column;
